# kserver

./: .gitignore  Cargo.toml  README.md  download_data.sh  plot  response.xml  result.csv
deprecated_paper_results/: bk_k10_l1000_p10_b170_lazy.csv  bk_k2_l1000_p10_b28.csv  bk_k2_l1000_p10_b28_lazy.csv
final/: bk_k10_l1000_p20_b75.csv  bk_k10_l1000_p20_b85.csv  bk_k2_l1000_p20_b8.csv
finalp10/: bk_k100_l1000_p10_b1500.csv  bk_k100_l1000_p10_b1600.csv  bk_k100_l1000_p10_b1700.csv  bk_k100_l1000_p10_b1700_new.csv  bk_k2_l1000_p10_b28.csv  bk_k5_l1000_p10_b75.csv  bk_k5_l1000_p10_b75_new.csv
kserver/: Cargo.toml
kserver/src/: algorithms.rs  cost.rs  instance.rs  lib.rs  pred.rs  request.rs  server_config.rs
ktaxi/: Cargo.toml
ktaxi/src/: algorithms.rs  lib.rs
paper_results/: bk_k10.csv  bk_k100_l1000_p20_b700_lmb11.csv  bk_k10_l1000_p20_b75_lmb11.csv  bk_k10_lazy.csv  bk_k2.csv  bk_k2_l1000_p20_b10_lmb11.csv  bk_k2_lazy.csv  bk_k50.csv  bk_k50_lazy.csv  bk_k5_l1000_p20_b32_lmb11.csv
paper_results_old/: bk_k10_l1000_p10_b170.csv
samplelib/: Cargo.toml
samplelib/src/: lib.rs  result.rs  sample.rs
scripts/: plot.py
serverlib/: Cargo.toml
serverlib/src/: instance.rs  lib.rs  pred.rs  schedule.rs  server_config.rs
src/: algorithm.rs  cli.rs  cost.rs  export.rs  instance.rs  instance_generator.rs  instance_sample.rs  lib.rs  main.rs  pred.rs  pred_generator.rs  request.rs  results.rs  sample.rs  sample_generator.rs  schedule.rs  seq.rs  server_config.rs  sim.rs  solver.rs
