[package]
name = "serversim"
version = "0.1.0"
authors = ["Alexander Lindermayr <linderal@uni-bremen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "serversim"
path = "src/main.rs"

[dependencies]
mcmf = "2.0.0"
structopt = "0.2.10"
rand = "0.7.3"
console = "0.9.2"
rayon = "1.1"
indicatif = {version = "*", features = ["with_rayon"]}
itertools-num = "0.1.3"
csv = "1.1.3"
serde = { version = "1", features = ["derive"] }
log = "0.4.8"
kserver = { version = "^0.1.0", path="kserver" }

