[package]
name = "serversim"
version = "0.1.0"
authors = ["Alexander Lindermayr <linderal@uni-bremen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "serversim"
path = "src/main.rs"


[workspace]
members = [
    "serverlib",
    "samplelib",
    "kserver",
    "ktaxi",
]

[dependencies]
mcmf = "2.0.0"
structopt = "0.3.21"
rand = "0.8.3"
console = "0.14.1"
rayon = "1.1"
indicatif = {version = "*", features = ["with_rayon"]}
itertools-num = "0.1.3"
csv = "1.1.3"
serde = { version = "1", features = ["derive"] }
log = "0.4.8"
serverlib = { version = "^0.1.0", path="serverlib" }
samplelib = { version = "^0.1.0", path="samplelib" }
kserver = { version = "^0.1.0", path="kserver" }
ktaxi = { version = "^0.1.0", path="ktaxi" }
