[package]
name = "ktaxi"
version = "0.1.0"
authors = ["Alexander Lindermayr <linderal@uni-bremen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serverlib = { version = "^0.1.0", path="../serverlib" }
samplelib = { version = "^0.1.0", path="../samplelib" }